--- a/package.json
+++ b/package.json
@@ -6,24 +6,43 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
     "@gluestack-style/react": "^1.0.57",
     "@gluestack-ui/config": "^1.1.19",
     "@gluestack-ui/themed": "^1.1.34",
+    "@react-aria/visually-hidden": "^3.8.21",
+    "@react-native-aria/slider": "^0.2.12",
+    "@react-navigation/bottom-tabs": "^7.3.9",
+    "@react-navigation/native": "^7.0.19",
+    "@react-navigation/native-stack": "^7.3.3",
     "expo": "~52.0.40",
     "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
+    "native-base": "^2.15.2",
     "react": "18.3.1",
+    "react-dom": "^19.1.0",
     "react-native": "0.76.7",
-    "react-native-svg": "15.8.0"
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
+    "react-native-svg-transformer": "^1.5.0",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "overrides": {
+    "lodash.pick": "^4.4.0",
+    "lodash.template": "^4.5.0"
+  }
 }
