--- a/package.json
+++ b/package.json
@@ -14,22 +14,29 @@
     "@gluestack-style/react": "^1.0.57",
     "@gluestack-ui/config": "^1.1.19",
     "@gluestack-ui/themed": "^1.1.34",
+    "@hookform/resolvers": "^5.0.1",
     "@react-aria/visually-hidden": "^3.8.21",
     "@react-native-aria/slider": "^0.2.12",
     "@react-navigation/bottom-tabs": "^7.3.9",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
+    "axios": "^1.9.0",
     "expo": "~52.0.40",
+    "expo-file-system": "~18.0.12",
     "expo-font": "~13.0.4",
+    "expo-image-picker": "~16.0.6",
     "expo-status-bar": "~2.0.1",
+    "lucide-react-native": "^0.487.0",
     "native-base": "^2.15.2",
     "react": "18.3.1",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.55.0",
     "react-native": "0.76.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
